fix: add padding to services items on mobile

--- a/#src/scss/home.scss
+++ b/#src/scss/home.scss
@@ -189,7 +189,7 @@
     }
     @media (max-width:$md4+px){
       flex: 0 0 80%;
-      margin: 0px 0px 0px 0px; 
+      margin: 0px 0px 26px 0px; 
       padding: 0px 10px;
     }
   }
